# pdfconverter

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.de.md  README.md  TDD.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: security.yml
app/: __init__.py  converter.py  converter_config.py  main.py  metrics.py
monitoring/: README.md  prometheus.yml
monitoring/grafana/provisioning/dashboards/: dashboard.yml
monitoring/grafana/provisioning/datasources/: prometheus.yml
tests/: README.md  __init__.py  conftest.py  test_api.py  test_converter.py  test_converter_config.py  test_edge_cases.py  test_metrics.py  test_pdf_type_detection.py
tests/integration/: test_end_to_end.py  test_pdfa_validation.py
